css/style.css
@media(min-width: 980px) {
  body {
    padding-top: 60px;
  }
}

.navbar .logo { 
  margin-top: 5px;
  margin-right: 10px;
}

#site-name {
  line-height: 1;
  margin: 0;
}

.submitted {
  margin-bottom: 1em;
  font-style: italic;
  font-weight: normal;
  color: #777;
}

.footer {
  margin-top: 45px;
  padding: 35px 0 36px;
  border-top: 1px solid #E5E5E5;
}

ul.action-links {
  margin-bottom: 2em;
}

ul.action-links li {
  display: inline;
  padding-right: 1.5em;
}

ul.action-links [class^="icon-"],
ul.action-links [class*=" icon-"] {
  padding-right: .5em;
}

/**
 * Admin Styling
 */

/* Fix Toolbar for .navbar-fixed-top */
body.toolbar .navbar-fixed-top {
 top: 30px;
}

body.toolbar-drawer .navbar-fixed-top {
 top: 65px;
}

@media(min-width: 980px) {
  body.toolbar {
    padding-top: 94px !important;
  }

  body.toolbar-drawer {
    padding-top: 129px !important;
  }
}

html.overlay-open .navbar-fixed-top {
  z-index: 400;
}

/**
 * Search form stylings.
 */

.region-navigation form#search-block-form {
  margin-bottom: 5px;
  margin-top: 5px;
}

@media(max-width: 979px) {
  .region-navigation form#search-block-form {
    float: none;
  }
}

fieldset.search-advanced {
  padding-bottom: 1.5em;
  margin-top: 1em;
}

/* Admin toolbar fix */
body.admin-expanded.admin-vertical.admin-nw .navbar,
body.admin-expanded.admin-vertical.admin-sw .navbar {
  margin-left: 260px;
}

div#admin-toolbar {
  z-index: 500;
}

/* Admin_menu fix */
#admin-menu {
  z-index: 1100;
  position: fixed; 
}

body.admin-menu .navbar-fixed-top {
  top: 30px; 
}

#admin-menu .dropdown li {
  line-height: normal;
} 

/* System base fix */
.container-inline div, .container-inline label {
  display: block;
}

/* Default form fields to auto */
input, textarea, select, .uneditable-input {
  width:auto;
}

/* Default textfield styles inside vertical tabs */
.vertical-tabs .form-type-textfield input {
  -moz-box-sizing: inherit;
  -webkit-box-sizing: inherit;
  box-sizing: inherit;
  width: auto;
}

/* Vertical tabs form elements alighment */
.vertical-tabs .form-item{
  margin: 1em 0;
}

/* Collapsible field groups fix */
html.js fieldset.collapsed {
 height: auto;
}

/* throbber fix */
html.js input.form-autocomplete {
  background-position: 100% 8px; /* LTR */
  background-repeat: no-repeat;
}

html.js input.throbbing {
  background-position: 100% -13px; /* LTR */
}

.navbar-search .control-group {
  margin-bottom:0px;
}

input.error {
  color: #B94A48;
  border-color: #B94A48;
}

/**
 * Password strength indicator.
 */
.password-strength {
  width: 17em;
  float: right;  /* LTR */
  margin-top: 1.4em;
}

.password-strength-title {
  display: inline;
}

.password-strength-text {
  float: right; /* LTR */
  font-weight: bold;
}

.password-indicator {
  background-color: #C4C4C4;
  height: 0.3em;
  width: 100%;
}

.password-indicator div {
  height: 100%;
  width: 0%;
  background-color: #47C965;
}

input.password-confirm,
input.password-field {
  width: 16em;
  margin-bottom: 0.4em;
}

div.password-confirm {
  float: right;  /* LTR */
  margin-top: 1.5em;
  visibility: hidden;
  width: 17em;
}

div.form-item div.password-suggestions {
  padding: 0.2em 0.5em;
  margin: 0.7em 0;
  width: 38.5em;
  border: 1px solid #B4B4B4;
}

div.password-suggestions ul {
  margin-bottom: 0;
}

.confirm-parent,
.password-parent {
  clear: left; /* LTR */
  margin: 0;
  width: 36.3em;
}
/* added an extra clear both in the situation the form actions is preceded by an badly wrapped float element and they overlap
e.g. multipage*/

.form-actions{
  clear: both;
}

/* Progress Bar Overrides */
.progress-wrapper .progress {
  margin-bottom: 10px;
}
.progress-wrapper .progress .bar {
  border: 0 none;
  margin: 0;
}

